- added meta tags

--- a/additem.html
+++ b/additem.html
@@ -2,8 +2,14 @@
 <html>
 	<head>
 		<title>Project List</title>
+		<meta name="description" content="Free web app to help you manage your projects">
+		<meta name="keywords" content="Mobile,Project Management,Useful Tool,Full Sail">
+		<meta name="charset" content="UTF-8">
+		<meta name="robots" content="index, nofollow">
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	</head>
 	<body>
+		<h1>Project List</h1>
 		<form action="index.html">
 			<legend>Add A Project</legend>
 			<input type="submit">
