--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!doctype html>
+<!-- 
+	Visual Frameworks Project 1
+	By: Deus Duke 
+	Term:  1303
+-->
 <html>
 	<head>
 		<title>Project Tracker</title>
