--- a/additem.html
+++ b/additem.html
@@ -6,12 +6,13 @@
 -->
 <html>
 	<head>
-		<title>Project List</title>
+		<meta http-equiv="content-type" content="text/html;charset=utf-8">
 		<meta name="description" content="Free web app to help you manage your projects">
 		<meta name="keywords" content="Mobile,Project Management,Useful Tool,Full Sail">
-		<meta name="charset" content="UTF-8">
 		<meta name="robots" content="index, nofollow">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
+		<title>Project List</title>
 	</head>
 	<body>
 		<h1>Create a Project</h1>
@@ -26,7 +27,7 @@
 				<input id="startDate" name="startDate" type="date" />
 				<br>
 
-				<label for="type">Type</label>
+				<h4>Type</h4>
 				<input name="type" type="radio" value="internal" />
 				<input name="type" type="radio" value="external" />
 				<input name="type" type="radio" value="personal" />
@@ -42,7 +43,7 @@
 
 			<a href="#">Save</a>
 			<br>
-			
+
 			<a href="#">Display Projects</a>
 
 			<input type="hidden">
