--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 -->
 <html>
 	<head>
+		<meta http-equiv="content-type" content="text/html;charset=utf-8">
+		<meta name="description" content="Free web app to help you manage your projects">
+		<meta name="keywords" content="Mobile,Project Management,Useful Tool,Full Sail">
+		<meta name="robots" content="index, nofollow">
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<title>Project Tracker</title>
 	</head>
 	<body>
